# idl2rs

./: Cargo.toml
src/: grammar.md  lib.rs  main.rs  parser.md  parser.rs  tests.rs
